[gd_scene load_steps=7 format=3 uid="uid://dc2rpancj1mql"]

[ext_resource type="Script" uid="uid://bjghhgnafodkb" path="res://ui/ui.gd" id="1_m6e0p"]
[ext_resource type="Theme" uid="uid://de61k6i5aq6u6" path="res://assets/themes/ui_theme.tres" id="2_wl5ax"]
[ext_resource type="Script" uid="uid://jywldawjjc6b" path="res://ui/button.gd" id="3_wl5ax"]

[sub_resource type="Animation" id="Animation_n5ude"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -707)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ibotj"]
resource_name = "game_over"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -707), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y4yjw"]
_data = {
&"RESET": SubResource("Animation_n5ude"),
&"game_over": SubResource("Animation_ibotj")
}

[node name="UI" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_m6e0p")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -707.0
offset_bottom = -707.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="UIControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_wl5ax")

[node name="ScoreLabel" type="Label" parent="UIControl"]
layout_mode = 1
offset_left = 21.0
offset_top = 16.0
offset_right = 146.0
offset_bottom = 99.0
text = "Score 
0"

[node name="Timer" type="Timer" parent="UIControl"]
unique_name_in_owner = true

[node name="TimerLabel" type="Label" parent="UIControl"]
layout_mode = 1
offset_left = 21.0
offset_top = 91.0
offset_right = 138.0
offset_bottom = 174.0
text = "Timer
01:30"

[node name="FinishLabel" type="Label" parent="UIControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -286.0
offset_top = -246.5
offset_right = 286.0
offset_bottom = -43.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "LEVEL
COMPLETE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BestScoreLabel" type="Label" parent="UIControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -60.5
offset_right = 145.0
offset_bottom = 148.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "SCORE
0
BEST SCORE
0"
horizontal_alignment = 1
autowrap_mode = 1

[node name="StartButton" type="Button" parent="UIControl"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -228.0
offset_top = -160.0
offset_right = 229.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 70
text = "START GAME"
script = ExtResource("3_wl5ax")

[node name="NextButton" type="Button" parent="UIControl"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -219.0
offset_top = -160.0
offset_right = 219.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 70
text = "NEXT LEVEL"
script = ExtResource("3_wl5ax")

[node name="RetryButton" type="Button" parent="UIControl"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -160.0
offset_right = 240.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 70
text = "RETRY LEVEL"
script = ExtResource("3_wl5ax")

[node name="MenuButton" type="Button" parent="UIControl"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -176.0
offset_top = 18.0
offset_right = -17.0
offset_bottom = 88.0
grow_horizontal = 0
text = "MENU"
script = ExtResource("3_wl5ax")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_y4yjw")
}

[connection signal="pressed" from="UIControl/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="UIControl/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="UIControl/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="UIControl/MenuButton" to="." method="_on_menu_button_pressed"]
